--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,25 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="333dp"
+        android:layout_width="match_parent"
         android:layout_height="97dp"
         android:layout_gravity="center"
-        android:text="Recycler View example"
+        android:background="#61BEE8"
+        android:gravity="center"
+        android:text="LIST OF ANDROID VERISONS "
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NOTE: Click on the android image for more info on its version"
+        android:textColor="#E31212" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
