--- a/app/src/main/res/layout/every_row_design.xml
+++ b/app/src/main/res/layout/every_row_design.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:background="#000000"
     android:orientation="horizontal">
 
 
@@ -29,8 +30,10 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:text="title"
-            android:textColor="#0E0D0D"
-            android:textSize="25dp" />
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
@@ -39,8 +42,8 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:text="title"
-            android:textColor="#0E0D0D"
-            android:textSize="25dp" />
+            android:textColor="#FFFFFF"
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -49,8 +52,9 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:text="title"
-            android:textColor="#0E0D0D"
-            android:textSize="25dp" />
+            android:textColor="#FFFFFF"
+            android:textSize="18dp" />
+
     </LinearLayout>
 
 </LinearLayout>
